Pre-calculate height of ContentSuggestions cells

The height of the ContentSuggestions cells were calculated using auto
layout. This introduce a lag when the layout is invalidated, visible
when a scrolling gesture is started.
Using a pre-calculated height allow us to reduce the compute time and
eliminate the lag.

BUG=740450

Change-Id: I64f0e670c460d8fbce5a2af9001fa874fa41d55c