ios/chrome/browser/ui/collection_view/cells/collection_view_text_cell.mm
@@ -33,6 +33,8 @@ const CGFloat kMinimalHeight = 48;
     _detailTextLabel.translatesAutoresizingMaskIntoConstraints = NO;
     [containerView addSubview:_detailTextLabel];
 
+    CGFloat margin = [[self class] margin];
+
     [NSLayoutConstraint activateConstraints:@[
       // Total height.
       // The MDC specs ask for at least 48 pt.
@@ -42,16 +44,16 @@ const CGFloat kMinimalHeight = 48;
       // Container.
       [containerView.leadingAnchor
           constraintEqualToAnchor:self.contentView.leadingAnchor
-                         constant:kMargin],
+                         constant:margin],
       [containerView.trailingAnchor
           constraintEqualToAnchor:self.contentView.trailingAnchor
-                         constant:-kMargin],
+                         constant:-margin],
       [containerView.topAnchor
           constraintGreaterThanOrEqualToAnchor:self.contentView.topAnchor
-                                      constant:kMargin],
+                                      constant:margin],
       [containerView.bottomAnchor
           constraintLessThanOrEqualToAnchor:self.contentView.bottomAnchor
-                                   constant:-kMargin],
+                                   constant:-margin],
       [containerView.centerYAnchor
           constraintEqualToAnchor:self.contentView.centerYAnchor],
 
@@ -74,6 +76,10 @@ const CGFloat kMinimalHeight = 48;
   return self;
 }
 
++ (CGFloat)margin {
+  return kMargin;
+}
+
 // Implement -layoutSubviews as per instructions in documentation for
 // +[MDCCollectionViewCell cr_preferredHeightForWidth:forItem:].
 - (void)layoutSubviews {
@@ -81,7 +87,7 @@ const CGFloat kMinimalHeight = 48;
   // Adjust the text and detailText label preferredMaxLayoutWidth when the
   // parent's width changes, for instance on screen rotation.
   CGFloat preferedMaxLayoutWidth =
-      CGRectGetWidth(self.contentView.frame) - 2 * kMargin;
+      CGRectGetWidth(self.contentView.frame) - 2 * [[self class] margin];
   _textLabel.preferredMaxLayoutWidth = preferedMaxLayoutWidth;
   _detailTextLabel.preferredMaxLayoutWidth = preferedMaxLayoutWidth;
 
