ios/chrome/browser/ui/content_suggestions/cells/suggested_content.h
@@ -29,6 +29,8 @@
 // Identifier for this content.
 @property(nonatomic, strong) ContentSuggestionIdentifier* suggestionIdentifier;
 
+- (CGFloat)cellHeightForWidth:(CGFloat)width;
+
 @end
 
 #endif  // IOS_CHROME_BROWSER_UI_CONTENT_SUGGESTIONS_CELLS_SUGGESTED_CONTENT_H_
